@@ -9,6 +9,12 @@
     * download max-time, connect-timeout and retry have all been increased.
     * More precise, and less verbose, progress messages. No fake progress message when there's nothing to be done.
     * More precise decision when to untar existing wtar files.
+    * New Yaml variable: LAST_PROGRESS, set the number of progress items to start with, so two batch files can have
+        consecutive progress reports. Defaults to 0.
+    * After creating a batch file, the full path to file is printed and the number of progress items.
+        This number can be passed to the next invocation of instl as LAST_PROGRESS variable.
+    * curl will print "Progress ... of ...;" at the beginning of each report line, to allow the invoker of
+        the batch file to track progress even in the absent of absolute numbers.
 
     programmer visible changes:
     * new utils function: safe_remove_file, removes a file and does not complain if file does not exist.
